--- a/zshrc.conf
+++ b/zshrc.conf
@@ -4,6 +4,8 @@
 # zgen load urbainvaes/fzf-marks
 # source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
+# INCLUDES
+#
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf-jump.zsh
 source ~/.zsh/fzf-templates.zsh
@@ -14,6 +16,8 @@ export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 # block cursor (5=bar)
 echo '\e[1 q'
 
+# ALIASES
+#
 alias ~=grep
 alias lg=lazygit
 alias gs="git status"
@@ -40,6 +44,7 @@ alias e-zsh="cd ~/config/ && edit zshrc.conf"
 alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
+alias e-fzf="fzf_edit"
 
 alias t="fzf_create_template"
 alias new="fzf_create_template"
@@ -78,6 +83,9 @@ alias gen-yew-web3="cargo generate --git https://github.com/monomadic/yew-web3-t
 
 alias ls-colors='for x in {0..8}; do for i in {30..37}; do for a in {40..47}; do echo -ne "\e[$x;$i;$a""m\\\e[$x;$i;$a""m\e[0;37;40m "; done; echo; done; done; echo ""'
 
+alias f-all="fzf_cd"
+alias f-edit="fzf_edit"
+
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
 export TERM="xterm-256color"
@@ -110,15 +118,24 @@ gc () {
 	git push
 }
 
+quickls () {
+	echo
+	echo
+	l
+	echo
+	zle && zle reset-prompt
+}; zle -N quickls;
+
 # bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
 zle -N lfcd; bindkey '^ ' lfcd #register widget + key
 
-bindkey '^b' fzm
-
+# KEYBINDINGS
+#
+# bindkey '^b' fzm
 bindkey '^e' fzf_edit
 bindkey '^o' fzf_cd
-# bindkey '^f' fzf_cd
+bindkey '^k' quickls
 
 function fzf_insert() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
@@ -155,41 +172,41 @@ function fzf_jump_dir() {
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
 
 # see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
-function fzf_jump_workspace() {
-	files=($(fd . ~/workspaces --extension workspace --follow| \
-		fzf --prompt 'workspace > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
-			--height 50% \
-			--header $'ctrl-[o:open, c:cancel]\n' \
-			--bind 'ctrl-o:execute:open {1}' \
-		"$@"))
-	[[ -n "$files" ]] && cd "${files[@]}"
-	zle && zle reset-prompt
-}
-zle -N fzf_jump_workspace; bindkey '^w' fzf_jump_workspace
+# function fzf_jump_workspace() {
+# 	files=($(fd . ~/workspaces --extension workspace --follow| \
+# 		fzf --prompt 'workspace > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+# 			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
+# 			--height 50% \
+# 			--header $'ctrl-[o:open, c:cancel]\n' \
+# 			--bind 'ctrl-o:execute:open {1}' \
+# 		"$@"))
+# 	[[ -n "$files" ]] && cd "${files[@]}"
+# 	zle && zle reset-prompt
+# }
+# zle -N fzf_jump_workspace; bindkey '^w' fzf_jump_workspace
 
-function fzf_jump_project() {
-	files=($(exa ~/workspaces/*.workspace/* --oneline --only-dirs --list-dirs| \
-		fzf --prompt 'projects > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
-			--height 50% \
-			--header $'ctrl-[o:open, c:cancel]\n' \
-			--bind 'ctrl-o:execute:open {1}' \
-		"$@"))
-	[[ -n "$files" ]] && cd "${files[@]}"
-	zle && zle reset-prompt
-}
-zle -N fzf_jump_project;
+# function fzf_jump_project() {
+# 	files=($(exa ~/workspaces/*.workspace/* --oneline --only-dirs --list-dirs| \
+# 		fzf --prompt 'projects > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+# 			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
+# 			--height 50% \
+# 			--header $'ctrl-[o:open, c:cancel]\n' \
+# 			--bind 'ctrl-o:execute:open {1}' \
+# 		"$@"))
+# 	[[ -n "$files" ]] && cd "${files[@]}"
+# 	zle && zle reset-prompt
+# }
+# zle -N fzf_jump_project;
 
 
-function fzf_jump_dir_ext() {
-	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --type d --strip-cwd-prefix --max-depth 3 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-		--header $'ctrl-e:edit, ctrl-o:open\n' \
-		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
-		--bind 'ctrl-o:execute:open {1}' \
-		"$@"))
-	[[ -n "$files" ]] && cd "${files[@]}"
-	zle && zle reset-prompt
-}
-zle -N fzf_jump_dir_ext; bindkey '^k' fzf_jump_dir_ext
+# function fzf_jump_dir_ext() {
+# 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
+# 	files=($(fd --type d --strip-cwd-prefix --max-depth 3 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+# 		--header $'ctrl-e:edit, ctrl-o:open\n' \
+# 		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
+# 		--bind 'ctrl-o:execute:open {1}' \
+# 		"$@"))
+# 	[[ -n "$files" ]] && cd "${files[@]}"
+# 	zle && zle reset-prompt
+# }
+# zle -N fzf_jump_dir_ext; bindkey '^k' fzf_jump_dir_ext
