--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -4,6 +4,8 @@
 # zgen load urbainvaes/fzf-marks
 # source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
+# note: touch ~/.hushlogin to remove login message
+
 # INCLUDES
 #
 source ~/.zsh/fzf-marks.zsh
@@ -40,7 +42,7 @@ alias e=nvim
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua +PackerCompile"
-alias e-zsh="cd ~/config/ && edit zshrc.conf"
+alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
 alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
@@ -121,7 +123,7 @@ gc () {
 quickls () {
 	echo
 	echo
-	l
+	ll
 	echo
 	zle && zle reset-prompt
 }; zle -N quickls;
@@ -141,7 +143,7 @@ function fzf_insert() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
 	files=($(fd --strip-cwd-prefix --max-depth 1 --max-results 10000 | \
 		fzf --prompt 'insert > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-			--height 50% \
+			--height 75% \
 			--header $'ctrl-e:edit, ctrl-o:open\n' \
 			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
 			--bind 'ctrl-o:execute:open {1}' \
@@ -158,9 +160,11 @@ zle -N fzf_insert; bindkey '^y' fzf_insert
 # see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
 function fzf_jump_dir() {
 	files=($(exa --icons --only-dirs| \
-		fzf --prompt ' ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
+		fzf --prompt ' ' --layout=reverse \
+			--preview 'exa --icons --group-directories-first {}' \
+			--color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5 \
 			--height 50% \
+			--pointer=' ' \
 			--info=hidden \
 			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
 			--bind 'ctrl-o:execute:open {1}' \
