--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -6,14 +6,19 @@
 
 # note: touch ~/.hushlogin to remove login message
 
+export HISTSIZE=100000 # bigger history
+
 # INCLUDES
 #
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf-jump.zsh
 source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
+source ~/.zsh/fzf-browser.zsh
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
+
+export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
 
 # block cursor (5=bar)
 echo '\e[1 q'
@@ -161,7 +166,7 @@ zle -N fzf_insert; bindkey '^y' fzf_insert
 function fzf_jump_dir() {
 	files=($(exa --icons --only-dirs| \
 		fzf --prompt ' ' --layout=reverse \
-			--preview 'exa --icons --group-directories-first {}' \
+		--preview 'exa --icons --group-directories-first --all --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(echo {}|cut -c2-)' \
 			--color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5 \
 			--height 50% \
 			--pointer=' ' \
@@ -174,43 +179,3 @@ function fzf_jump_dir() {
 	zle && zle reset-prompt
 }
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
-
-# see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
-# function fzf_jump_workspace() {
-# 	files=($(fd . ~/workspaces --extension workspace --follow| \
-# 		fzf --prompt 'workspace > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-# 			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
-# 			--height 50% \
-# 			--header $'ctrl-[o:open, c:cancel]\n' \
-# 			--bind 'ctrl-o:execute:open {1}' \
-# 		"$@"))
-# 	[[ -n "$files" ]] && cd "${files[@]}"
-# 	zle && zle reset-prompt
-# }
-# zle -N fzf_jump_workspace; bindkey '^w' fzf_jump_workspace
-
-# function fzf_jump_project() {
-# 	files=($(exa ~/workspaces/*.workspace/* --oneline --only-dirs --list-dirs| \
-# 		fzf --prompt 'projects > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-# 			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
-# 			--height 50% \
-# 			--header $'ctrl-[o:open, c:cancel]\n' \
-# 			--bind 'ctrl-o:execute:open {1}' \
-# 		"$@"))
-# 	[[ -n "$files" ]] && cd "${files[@]}"
-# 	zle && zle reset-prompt
-# }
-# zle -N fzf_jump_project;
-
-
-# function fzf_jump_dir_ext() {
-# 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-# 	files=($(fd --type d --strip-cwd-prefix --max-depth 3 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-# 		--header $'ctrl-e:edit, ctrl-o:open\n' \
-# 		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
-# 		--bind 'ctrl-o:execute:open {1}' \
-# 		"$@"))
-# 	[[ -n "$files" ]] && cd "${files[@]}"
-# 	zle && zle reset-prompt
-# }
-# zle -N fzf_jump_dir_ext; bindkey '^k' fzf_jump_dir_ext
