--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -123,7 +123,7 @@ cmd open ${{
     case $(file --mime-type $f -b) in
         text/*) nvim $fx;;
         video/*) mpv $fx;;
-        image/*) mpv $fx --pause;;
+        image/*) echo && chafa --format=kitty $fx && echo ;;
         *) for f in $fx; do setsid $OPENER $f > /dev/null 2> /dev/null & done;;
     esac
 }}
