--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -93,6 +93,10 @@ alias ls-colors='for x in {0..8}; do for i in {30..37}; do for a in {40..47}; do
 alias f-all="fzf_cd"
 alias f-edit="fzf_edit"
 
+alias v="viu --height 20"
+alias sixel="chafa --format=sixel --height 20"
+alias img="chafa --format=symbols "
+
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
 export TERM="xterm-256color"
@@ -171,9 +175,11 @@ function fzf_jump_dir() {
 			--height 50% \
 			--pointer=' ' \
 			--info=hidden \
-			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
-			--bind 'ctrl-o:execute:open {1}' \
+			--bind 'ctrl-h:reload(exa --icons --only-dirs --all)' \
+			--bind 'tab:accept' \
+			--bind 'ctrl-j:jump-accept' \
 		"$@"))
+			# --bind 'tab:execute(cd "$(echo {}|cut -c3- > l.txt)")+reload(cd "$(echo {}|cut -c3- > l.txt)"&&exa --icons --only-dirs)+change-prompt({1})'
 		file=($(echo ${files[@]}|cut -c2-))
 	[[ -n "$file" ]] && cd "${file[@]}"
 	zle && zle reset-prompt
