refactor: moved plugins to lazy.nvim

--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -48,6 +48,7 @@ alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua +PackerCompile"
 alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
+alias e-snippets="cd ~/config/neovim/snippets/ && edit . +'Telescope find_files'"
 alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
@@ -63,14 +64,13 @@ alias vi=nvim
 alias dd='WD=${PWD} && cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml deploy --global-config global.toml --local-config local.toml && cd $WD'
 alias dw='cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml watch --global-config global.toml --local-config local.toml'
 
-alias l=lfcd
 alias p="ping cloudflare.com"
 alias scrt="secretcli"
-alias l="exa --icons --group-directories-first"
+alias l="echo && exa --icons --group-directories-first && echo"
 alias lt="exa --tree --icons --level 2"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
-alias ll="exa --icons --group-directories-first --all --no-time --no-permissions --no-user -l --ignore-glob '.DS_Store'"
+alias ll="echo && exa --icons --group-directories-first --all --no-time --no-permissions --no-user -l --ignore-glob '.DS_Store' && echo"
 
 alias lln="exa --icons --all -l --sort=date"
 alias vi="nvim"
@@ -96,6 +96,10 @@ alias f-edit="fzf_edit"
 alias v="viu --height 20"
 alias sixel="chafa --format=sixel --height 20"
 alias img="chafa --format=symbols "
+
+alias workspaces="cd ~/workspaces && l"
+alias snippets="cd ~/config/neovim/snippets/ && ll"
+alias src="cd ~/src && l"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
