--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -30,6 +30,7 @@ alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
 alias gp="git push"
+alias gt="gitui"
 alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
 alias branch="b"
 alias gb="b"
@@ -46,7 +47,7 @@ alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias e=nvim
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
-alias e-neovim="cd ~/config/neovim/ && edit init.lua +PackerCompile"
+alias e-neovim="cd ~/config/neovim/ && edit init.lua"
 alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
 alias e-snippets="cd ~/config/neovim/snippets/ && edit . +'Telescope find_files'"
 alias wiki="cd ~/wiki && edit index.md"
