--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -44,7 +44,7 @@ alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 # alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
-alias e=nvim
+alias e=nvim -c "lua GoRoot()"
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
