--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -42,8 +42,7 @@ alias cc="cargo check"
 alias cr="cargo run"
 alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
-alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
-# alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
+alias wiki='cd ~/wiki && e ~/wiki/index.md +"lua GoRoot()"'
 alias e=nvim -c "lua GoRoot()"
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
