fix: remote prompt

--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -112,7 +112,7 @@ if [[ $HOSTNAME = "nom.local" ]]
 	then
 		export PROMPT='%F{blue} %~%b%f $ '
 	else
-		export PROMPT="%T $HOSTNAME %F{green}% ~%b%f > "
+		export PROMPT="%F{green} ${HOSTNAME}  %F{blue} %~%b%f > "
 fi
 
 # foundry
