neovim: jump module treesitter

--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -174,7 +174,7 @@ zle -N fzf_insert; bindkey '^y' fzf_insert
 function fzf_jump_dir() {
 	files=($(exa --icons --only-dirs| \
 		fzf --prompt ' ' --layout=reverse \
-		--preview 'exa --icons --group-directories-first --all --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(echo {}|cut -c2-)' \
+		--preview 'exa --icons --group-directories-first --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(echo {}|cut -c2-)' \
 			--color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5 \
 			--height 50% \
 			--pointer=' ' \
