--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -15,6 +15,7 @@ source ~/.zsh/lf-jump.zsh
 source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
+source ~/.env
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
@@ -86,6 +87,7 @@ alias d-rustdoc="open https://doc.rust-lang.org/rustdoc/"
 alias d-rustup-cargo="rustup doc --cargo"
 alias d-rustup-core="rustup doc --core"
 alias d-wasmtime="open https://docs.wasmtime.dev/"
+alias d-bevy-cheat="open https://bevy-cheatbook.github.io/"
 
 alias gen-yew-web3="cargo generate --git https://github.com/monomadic/yew-web3-template"
 
