--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -104,6 +104,8 @@ alias workspaces="cd ~/workspaces && l"
 alias snippets="cd ~/config/neovim/snippets/ && ll"
 alias src="cd ~/src && l"
 
+alias youtube-dl-audio="youtube-dl --extract-audio --audio-format mp3 "
+
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
 export TERM="xterm-256color"
