--- a/alacritty.yml
+++ b/alacritty.yml
@@ -61,7 +61,7 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: "Ark Nerd Font Mono"
+    family: "Hack Nerd Font Mono"
     # family: "Ark Nerd Font Mono"
     # style: Regular
 
@@ -76,7 +76,7 @@ font:
   #   # style: Italic
 
   # Point size of the font
-  size: 16
+  size: 12
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
