--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -56,6 +56,9 @@ alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
 
+alias p8="ping 8.8.8.8"
+alias pg="ping google.com"
+
 alias t="fzf_create_template"
 alias new="fzf_create_template"
 alias template="fzf_create_template"
@@ -97,7 +100,8 @@ alias f-all="fzf_cd"
 alias f-edit="fzf_edit"
 
 alias v="viu --height 20"
-alias sixel="chafa --format=sixel --height 20"
+alias sixel="chafa --clear --format=symbol --center=on --scale=max "
+alias sixel-kitty="chafa --clear --format=kitty --center=on --scale=max "
 alias img="chafa --format=symbols "
 
 alias workspaces="cd ~/workspaces && l"
