--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -17,9 +17,11 @@ source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
 source ~/.env
 
-export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
+export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
+
+export HOMEBREW_NO_ENV_HINTS
 
 # block cursor (5=bar)
 echo '\e[1 q'
@@ -101,6 +103,7 @@ alias f-edit="fzf_edit"
 
 alias v="viu --height 20"
 alias sixel="chafa --clear --format=symbol --center=on --scale=max "
+alias sixel-sixel="chafa --clear --format=sixel --center=on --scale=max "
 alias sixel-kitty="chafa --clear --format=kitty --center=on --scale=max "
 alias img="chafa --format=symbols "
 
