--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -122,7 +122,7 @@ cmd open ${{
     test -L $f && f=$(readlink -f $f)
     case $(file --mime-type $f -b) in
         text/*) nvim $fx;;
-        video/*) mpv $fx;;
+        video/*) mpv --no-native-fs --msg-level=all=no $fx;;
         image/*) echo && fbi $fx && echo ;;
         *) for f in $fx; do setsid $OPENER $f > /dev/null 2> /dev/null & done;;
     esac
