--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -58,6 +58,8 @@ alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
 
+alias loc=tokei
+
 alias p8="ping 8.8.8.8"
 alias pg="ping google.com"
 
