--- a/kitty.conf
+++ b/kitty.conf
@@ -21,7 +21,7 @@ map cmd+[ previous_window
 #: characters.
 
 #font_family      Iosevka
-font_family      Ark Nerd Font Mono
+font_family      Monaco Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -232,7 +232,7 @@ cursor_blink_interval 1
 
 #: }}}
 
-#: Scrollback \{\{{
+#: Scrollback \{{{
 
 # scrollback_lines 2000
 
@@ -290,7 +290,7 @@ cursor_blink_interval 1
 
 #: }}}
 
-#: Mouse \{\{{
+#: Mouse \{{{
 
 mouse_hide_wait 2
 
@@ -384,7 +384,7 @@ detect_urls yes
 #: The default shape of the mouse pointer when dragging across text.
 #: Valid values are: arrow, beam and hand
 
-#: Mouse actions \{\{{
+#: Mouse actions \{{{
 
 #: Mouse buttons can be remapped to perform arbitrary actions. The
 #: syntax for doing so is:
@@ -538,7 +538,7 @@ detect_urls yes
 
 #: }}}
 
-#: Performance tuning \{\{{
+#: Performance tuning \{{{
 
 # repaint_delay 10
 
@@ -569,7 +569,7 @@ detect_urls yes
 
 #: }}}
 
-#: Terminal bell \{\{{
+#: Terminal bell \{{{
 
 # enable_audio_bell yes
 
@@ -784,7 +784,7 @@ confirm_os_window_close 0
 
 #: }}}
 
-#: Tab bar \{\{{
+#: Tab bar \{{{
 
 # tab_bar_edge bottom
 
@@ -990,7 +990,7 @@ background #111
 #: to be used unchanged. Note that these colors can be overridden by
 #: the program running in the terminal.
 
-#: The color table \{\{{
+#: The color table \{{{
 
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
@@ -1239,7 +1239,7 @@ color10 #9ec400
 
 #: }}}
 
-#: OS specific tweaks \{\{{
+#: OS specific tweaks \{{{
 
 # wayland_titlebar_color system
 
@@ -1326,7 +1326,7 @@ macos_show_window_title_in none
 
 #: }}}
 
-#: Keyboard shortcuts \{\{{
+#: Keyboard shortcuts \{{{
 
 #: Keys are identified simply by their lowercase unicode characters.
 #: For example: ``a`` for the A key, ``[`` for the left square bracket
@@ -1432,7 +1432,7 @@ macos_show_window_title_in none
 #: cause all invocations of the hints kitten to have the --hints-
 #: offset=0 option applied.
 
-#: Clipboard \{\{{
+#: Clipboard \{{{
 
 #: Copy to clipboard
 
@@ -1472,7 +1472,7 @@ macos_show_window_title_in none
 
 #: }}}
 
-#: Scrolling \{\{{
+#: Scrolling \{{{
 
 #: Scroll line up
 
@@ -1563,7 +1563,7 @@ macos_show_window_title_in none
 
 #: }}}
 
-#: Window management \{\{{
+#: Window management \{{{
 
 #: New window
 
@@ -1693,7 +1693,7 @@ macos_show_window_title_in none
 
 #: }}}
 
-#: Tab management \{\{{
+#: Tab management \{{{
 
 #: Next tab
 
@@ -1752,7 +1752,7 @@ map cmd+r set_tab_title
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
 #: }}}
 
-#: Layout management \{\{{
+#: Layout management \{{{
 
 #: Next layout
 
@@ -1776,7 +1776,7 @@ map cmd+r set_tab_title
 #:     map ctrl+alt+z toggle_layout stack
 #: }}}
 
-#: Font sizes \{\{{
+#: Font sizes \{{{
 
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
@@ -1813,7 +1813,7 @@ map cmd+r set_tab_title
 #:     map kitty_mod+f6 change_font_size current 10.0
 #: }}}
 
-#: Select and act on visible text \{\{{
+#: Select and act on visible text \{{{
 
 #: Use the hints kitten to select text and either pass it to an
 #: external program or insert it into the terminal or copy it to the
