--- a/skhd/skhd.conf
+++ b/skhd/skhd.conf
@@ -1,4 +1,7 @@
+# https://github.com/koekeishiya/skhd/issues/1
+
 # term
+rcmd - return : /Applications/kitty.app/Contents/MacOS/kitty --single-instance -d ~
 #cmd - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
 #cmd - shift - return : /Applications/Kitty.app/Contents/MacOS/kitty
 
@@ -10,3 +13,5 @@
 #
 # cmd - j : chunkc tiling::window --focus prev
 # cmd - k : chunkc tiling::window --focus next
+
+rcmd - n: open /Applications/numi.app
