--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -20,6 +20,7 @@ source ~/.env
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
+export FZF_DEFAULT_COMMAND="fd . --max-depth=3 |sk"
 
 export HOMEBREW_NO_ENV_HINTS
 
@@ -51,12 +52,14 @@ alias e=nvim -c "lua GoRoot()"
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
+alias e-joshuto="cd ~/config/joshuto/ && edit joshuto.toml"
 alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
 alias e-snippets="cd ~/config/neovim/snippets/ && edit . +'Telescope find_files'"
 alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
+alias j=joshuto
 
 alias loc=tokei
 
@@ -120,6 +123,10 @@ alias youtube-dl-audio="youtube-dl --extract-audio --audio-format mp3 "
 export TERM="xterm-256color"
 export HOSTNAME=`hostname`
 
+# COMPLETIONS
+#
+# exec `dotter gen-completions --shell "zsh"`
+
 # PROMPT
 # %T time
 if [[ $HOSTNAME = "nom.local" ]]
@@ -158,6 +165,26 @@ quickls () {
 # bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
 zle -N lfcd; bindkey '^ ' lfcd #register widget + key
+
+function joshuto-cd() {
+	local tmp="$(mktemp)"
+	joshuto --file-chooser --output-file "$tmp"
+	if [ -f "$tmp" ]; then
+			dir="$(cat "$tmp")"
+			rm -f "$tmp"
+			if [ -d "$dir" ]; then
+					if [ "$dir" != "$(pwd)" ]; then
+							cd "$dir"
+							# clear
+							zle && zle reset-prompt
+					fi
+			fi
+	fi
+}
+
+function cd_up() {
+	cd ..
+}
 
 # KEYBINDINGS
 #
@@ -203,3 +230,5 @@ function fzf_jump_dir() {
 	zle && zle reset-prompt
 }
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
+
+macchina
