--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2018,3 +2018,5 @@ map  ctrl+shift+tab  send_text normal,application \x1b[9;6u
 # cmd+s to ctrl+s
 map cmd+s send_text all \x13
 map cmd+backspace send_text all \x15
+
+include themes/1984-dark
