--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -164,7 +164,6 @@ quickls () {
 
 # bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
-zle -N lfcd; bindkey '^ ' lfcd #register widget + key
 
 function joshuto-cd() {
 	local tmp="$(mktemp)"
@@ -181,6 +180,8 @@ function joshuto-cd() {
 			fi
 	fi
 }
+#zle -N joshuto-cd; bindkey '^ ' joshuto-cd; #register widget + key
+zle -N lfcd; bindkey '^ ' lfcd; #register widget + key
 
 function cd_up() {
 	cd ..
