--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -677,7 +677,7 @@ window_padding_width 32 48
 #: the vertical and horizontal sides. Three values set top, horizontal
 #: and bottom. Four values set top, right, bottom and left.
 
-# placement_strategy center
+placement_strategy center
 
 #: When the window size is not an exact multiple of the cell size, the
 #: cell area of the terminal window will have some extra padding on
@@ -705,7 +705,7 @@ active_border_color #00ff00
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -790,11 +790,11 @@ confirm_os_window_close 0
 
 #: Which edge to show the tab bar on, top or bottom
 
-# tab_bar_margin_width 0.0
+tab_bar_margin_width 20.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-tab_bar_margin_height 10.0 10.0
+tab_bar_margin_height 20.0 20.0
 
 #: The margin above and below the tab bar (in pts). The first number
 #: is the margin between the edge of the OS Window and the tab bar and
@@ -827,7 +827,7 @@ tab_bar_style separator
 #:     action which presents you with a list of tabs and allows for easy
 #:     switching to a tab.
 
-tab_bar_align center
+tab_bar_align left
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, or right.
@@ -895,15 +895,15 @@ tab_title_template " {index}:{title} "
 #: tab_title_template.
 
 active_tab_foreground   #0FF
-active_tab_background   #111
+#active_tab_background   #000
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
-inactive_tab_background #111
+#inactive_tab_background #111
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-tab_bar_background #111
+#tab_bar_background #111
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
