--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -70,6 +70,8 @@ alias t="fzf_create_template"
 alias new="fzf_create_template"
 alias template="fzf_create_template"
 
+alias suckit-sub="suckit -v -j 1 --delay 1 --include-visit '${1}(.*)$' --include-download '${1}(.*)$' ${1}"
+
 alias vim=nvim
 alias vi=nvim
 
