--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -45,6 +45,8 @@ alias gd="git diff"
 alias cb="cargo build"
 alias cc="cargo check"
 alias cr="cargo run"
+alias crr="cargo run --release"
+alias ci="cargo install --path ."
 alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && e ~/wiki/index.md +"lua GoRoot()"'
