--- a/joshuto/mimetype.toml
+++ b/joshuto/mimetype.toml
@@ -17,8 +17,10 @@ image_default = [
 
 video_default = [
   { command = "mpv", args = [
+    "--no-native-fs",
+    "--msg-level=all=no",
     "--",
-  ], fork = true, silent = true },
+  ], silent = true },
   { command = "mediainfo", confirm_exit = true },
   { command = "mpv", args = [
     "--mute",
