--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -175,7 +175,7 @@ cmd touch %{{
 
 # move current file or selected files to trash folder
 # (also see 'man mv' for backup/overwrite options)
-cmd trash %set -f; mv $fx ~/.trash-lf
+cmd trash %set -f; rip $fx
 
 # define a custom 'delete' command
 # cmd delete ${{
