--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -6,6 +6,9 @@
 
 # note: touch ~/.hushlogin to remove login message
 
+setopt autocd # cd without typing cd
+autoload -Uz add-zsh-hook
+
 export HISTSIZE=100000 # bigger history
 
 # INCLUDES
@@ -61,7 +64,7 @@ alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
-alias j=joshuto
+alias j=joshuto-cd
 
 alias loc=tokei
 
@@ -170,9 +173,13 @@ quickls () {
 # bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
 
+function jcd() {
+	joshuto
+}; zle -N jcd;
+
 function joshuto-cd() {
-	local tmp="$(mktemp)"
-	joshuto --file-chooser --output-file "$tmp"
+	local tmp="$(mktemp)";
+	joshuto --file-chooser --output-file "$tmp";
 	if [ -f "$tmp" ]; then
 			dir="$(cat "$tmp")"
 			rm -f "$tmp"
@@ -184,8 +191,9 @@ function joshuto-cd() {
 					fi
 			fi
 	fi
-}
-#zle -N joshuto-cd; bindkey '^ ' joshuto-cd; #register widget + key
+}; zle -N joshuto-cd;
+
+#bindkey '^ ' joshuto-cd; #register widget + key
 zle -N lfcd; bindkey '^ ' lfcd; #register widget + key
 
 function cd_up() {
