--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -38,7 +38,8 @@ alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
 alias gp="git push"
-alias gt="gitui"
+alias push="git push"
+alias pull="git pull"
 alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
 alias branch="b"
 alias gb="b"
