--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -123,7 +123,7 @@ cmd open ${{
     case $(file --mime-type $f -b) in
         text/*) nvim $fx;;
         video/*) mpv --no-native-fs --msg-level=all=no $fx;;
-        image/*) echo && fbi $fx && echo ;;
+        image/*) echo && iv $fx && echo ;;
         # image/*) echo && fbi $fx && echo ;;
         *) for f in $fx; do setsid $OPENER $f > /dev/null 2> /dev/null & done;;
     esac
