--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-# kitty config
+# KITTY
 
 # switch tabs
 map cmd+1 goto_tab 1
@@ -654,7 +654,7 @@ draw_minimal_borders yes
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-# window_margin_width 0
+window_margin_width 0
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -670,7 +670,7 @@ draw_minimal_borders yes
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 32 48
+window_padding_width 0 26
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -784,59 +784,19 @@ confirm_os_window_close 0
 
 #: }}}
 
-#: Tab bar \{{{
-
-# tab_bar_edge bottom
-
-#: Which edge to show the tab bar on, top or bottom
-
-tab_bar_margin_width 20.0
-
-#: The margin to the left and right of the tab bar (in pts)
-
-tab_bar_margin_height 20.0 20.0
-
-#: The margin above and below the tab bar (in pts). The first number
-#: is the margin between the edge of the OS Window and the tab bar and
-#: the second number is the margin between the tab bar and the
-#: contents of the current tab.
-
+#: TAB_BAR
+tab_bar_edge top
+# which edge to show the tab bar on, top or bottom
+tab_bar_margin_width 32.0
+# margin to the left and right of the tab bar (in pts)
+tab_bar_margin_height 16.0 0.0
+# magin above and below tab bar (in pts).
 tab_bar_style separator
-
-#: The tab bar style, can be one of:
-
-#: fade
-#:     Each tab's edges fade into the background color (see tab_fade)
-#: slant
-#:     Tabs look like the tabs in a physical file
-#: separator
-#:     Tabs are separated by a configurable separator (see tab_separator)
-#: powerline
-#:     Tabs are shown as a continuous line with "fancy" separators
-#:     (see tab_powerline_style)
-#: custom
-#:     A user-supplied Python function called draw_tab is loaded from the file
-#:     tab_bar.py in the kitty config directory. For examples of how to
-#:     write such a function, see the functions named draw_tab_with_* in
-#:     kitty's source code: kitty/tab_bar.py. See also `this discussion
-#:     <https://github.com/kovidgoyal/kitty/discussions/4447>`_ for examples from
-#:     kitty users.
-#: hidden
-#:     The tab bar is hidden. If you use this, you might want to create a
-#:     mapping for the https://sw.kovidgoyal.net/kitty/actions/#select-tab
-#:     action which presents you with a list of tabs and allows for easy
-#:     switching to a tab.
-
-tab_bar_align left
-
-#: The horizontal alignment of the tab bar, can be one of: left,
-#: center, or right.
-
-# tab_bar_min_tabs 2
-
-#: The minimum number of tabs that must exist before the tab bar is
-#: shown
-
+# tab bar style: fade, slant, separator, powerline, custom, hidden
+tab_bar_align right
+# horizontal alignment of tab bar. left, center, right.
+tab_bar_min_tabs 1
+# min tabs before tab bar is shown
 # tab_switch_strategy previous
 
 #: The algorithm to use when switching to a tab when the current tab
@@ -854,7 +814,7 @@ tab_bar_align left
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator " "
+tab_separator "  "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -871,7 +831,7 @@ tab_separator " "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template " {index}:{title} "
+tab_title_template "{sup.index} {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -903,7 +863,7 @@ inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-#tab_bar_background #111
+# tab_bar_background #111
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -913,8 +873,6 @@ inactive_tab_font_style normal
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color.
 
-#: }}}
-
 # THEME
 #
 # foreground #dddddd
@@ -923,7 +881,7 @@ background #111
 
 #: The foreground and background colors
 
-#background_opacity 0.95
+background_opacity 0.95
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
