--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -247,3 +247,7 @@ function fzf_jump_dir() {
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
 
 macchina
+
+export WASMTIME_HOME="$HOME/.wasmtime"
+
+export PATH="$WASMTIME_HOME/bin:$PATH"
