--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -670,7 +670,7 @@ window_margin_width 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0 26
+window_padding_width 0 26 26 26
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -831,7 +831,7 @@ tab_separator "  "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{sup.index} {title}"
+tab_title_template "{sup.index}{title}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
